starlark_syntax/src/syntax/grammar_tests/error_string_escape.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
raw = r'a
b'

Error:
error: Parse error: unfinished string literal
 --> error_string_escape:1:7
  |
1 | raw = r'a
  |       ^^^
  |


Program:
s = "\x-0"

Error:
error: Parse error: invalid string escape sequence `x-`
 --> error_string_escape:1:6
  |
1 | s = "\x-0"
  |      ^^^
  |
